front/src/components/PlanTechMapsMenu.css
.planTechMapsMenu {
  margin: 24px 0 0 0;
}

.planTechMapsMenuHeader {
  line-height: 30px;
  padding: 0 0 0 20px;
}

.planTechMapsMenuHeader h6 {
  font-family: 'Fira Sans Bold';
  padding: 0;
  margin: 0 0 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.planTechMapsAddButton {
  line-height: 24px;
  color: #007aff;
  padding: 0 0 0 20px;
  user-select: none;
  cursor: pointer;
}

